tests/source1/fail/runtime_typecheck1.source
1 + false;
//error: "boo type mismatch"